k8s/hmg/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-node-deployment
  namespace: ns-hmg
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-node
  template:
    metadata:
      labels:
        app: api-node
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: ambiente
                    operator: In
                    values:
                      - hmg
      containers:
      - name: api-node
        image: api-node-exercicio
        resources:
          requests:
            cpu: "200m"
            memory: "200Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
