k8s/hmg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-node-service
  namespace: ns-hmg
spec:
  selector:
    app: api-node
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
  type: ClusterIP
