k8s/hmg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-node-ingress
  namespace: ns-hmg
spec:
  rules:
    - host: hmg.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-node-service
                port:
                  number: 80
